Resolves image overflow issue

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -142,7 +142,7 @@ li {
 /*About me section for Phones - make it a column with header, picture, then article.*/
 @media screen and (max-width: 768px) {
     #about {
-        /* This sets up the grid system for the About Me section on phones. It will include the header (#about-header), introductory article (#intro), and the profile picture (#me). */
+        /* This sets up the grid system for the About Me section on phones (or other devices smaller than 768px). It will include the header (#about-header), introductory article (#intro), and the profile picture (#me). */
         display: grid;
         width: 100%;
         grid-template-columns: 1fr;
@@ -150,13 +150,13 @@ li {
         grid-gap: 0.2rem;
         align-items: center;
     }
-    
+
     #about-header {
         /* This makes the About Me section header start at row 1, column 1 and have it span for 1 row and 1 columns. */
         grid-area: 1 / 1 / span 1 / span 1;
         text-align: center;
     }
-    
+
     #intro {
         /* This makes the About Me section article start at row 3, column 1 and have it span for 1 row and 1 column. */
         grid-area: 3 / 1 / span 1 / span 1;
@@ -164,7 +164,7 @@ li {
         line-height: 2;
         padding: 2rem;
     }
-    
+
     #me {
         /* This makes the About Me section article start at row 2, column 1 and have it span for 1 row and 1 column. */
         grid-area: 2 / 1 / span 1 / span 1;
@@ -178,6 +178,9 @@ li {
 }
 
 /*Projects*/
+#projects > * {
+    border: #01DBFF;
+}
 
 /*This section deals with the visual appearance of all buttons.*/
 button {
@@ -200,18 +203,15 @@ button:focus {
     cursor: pointer;
 }
 
-
-/* Makes cursor have a no-symbol when hovering over - For 
-cursor: not-allowed; */
-
-.soon {
-    width: 300px;
-    height: 300px;
+/*This section deals with the images in the Projects section*/
+.thumbnail {
+    max-width: 100%;
+    height: auto;
 }
 
-.thumbnail {
-    width: 900px;
-    height: 500px;
+.coming-soon {
+    width: 300px;
+    height: 300px;
 }
 
 /*-----------------------------------------------*/
@@ -240,7 +240,6 @@ cursor: not-allowed; */
 #fifth {
     width: 100%;
     text-align: center;
-    /* flex-shrink: 1; */
 }
 
 #first {
